--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "backend/server.js",
   "scripts": {
-    "start" : "node server",
-    "server" : "nodemon server"
+    "start": "node server",
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -18,7 +20,11 @@
   },
   "homepage": "https://github.com/Aditya-23/Social-Network#readme",
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.6",
     "bcryptjs": "^2.4.3",
+    "concurrently": "^7.2.2",
     "config": "^3.3.7",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
