--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.6",
+    "@reduxjs/toolkit": "^1.8.4",
     "bcryptjs": "^2.4.3",
     "concurrently": "^7.2.2",
     "config": "^3.3.7",
@@ -32,6 +33,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
     "nodemon": "^2.0.16",
-    "request": "^2.88.2"
+    "react-redux": "^8.0.2",
+    "request": "^2.88.2",
+    "uuid": "^3.4.0"
   }
 }
