--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/material": "^5.8.6",
     "@reduxjs/toolkit": "^1.8.4",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.2.2",
     "concurrently": "^7.2.2",
     "config": "^3.3.7",
     "express": "^4.18.1",
